--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <a href="#" class="header__logo"><img src="./images/__logo.png" alt="logo" class="logo__image"></a>
+      <a href="#" class="header__logo"><img src="./images/__logo.png" alt="лого" class="logo__image"></a>
       <div class="header__links">
         <a href="#" class="header__link">Ru</a>
         <a href="#" class="header__link">En</a>
