--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Document</title>
 </head>
-
 <body>
   <div class="page">
     <header class="header">
@@ -175,7 +174,6 @@
             </div>
           </li>
         </ul>
-
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="title cover__title">До Байкала «на собаках»</a>
@@ -197,5 +195,4 @@
     </footer>
   </div>
 </body>
-
 </html>
