--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__item">
-          <h2 class="title cover__title">До Байкала <br> «на собаках»</h2>
+          <h2 class="title cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
         </a>
